[gd_scene load_steps=30 format=2]

[ext_resource path="res://player/player_fase2/top_down_F2/player_top_down2.gd" type="Script" id=1]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0020.png" type="Texture" id=2]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0015.png" type="Texture" id=3]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0016.png" type="Texture" id=4]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0017.png" type="Texture" id=5]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0018.png" type="Texture" id=6]
[ext_resource path="res://player/player_fase1/top_down_F1/atack_animation/player_fase_1_T_D_atack0019.png" type="Texture" id=7]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0022.png" type="Texture" id=8]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0023.png" type="Texture" id=9]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0024.png" type="Texture" id=10]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0025.png" type="Texture" id=11]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0026.png" type="Texture" id=12]
[ext_resource path="res://player/player_fase1/top_down_F1/death_animation/player_fase_1_T_D_death0027.png" type="Texture" id=13]
[ext_resource path="res://player/player_fase1/top_down_F1/idlle_animation/player_fase_1_T_D_idlle0000.png" type="Texture" id=14]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0003.png" type="Texture" id=15]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0004.png" type="Texture" id=16]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0005.png" type="Texture" id=17]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0006.png" type="Texture" id=18]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0007.png" type="Texture" id=19]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0008.png" type="Texture" id=20]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0009.png" type="Texture" id=21]
[ext_resource path="res://player/player_fase1/top_down_F1/walk_animation/player_fase_1_T_D_walk0010.png" type="Texture" id=22]

[sub_resource type="CircleShape2D" id=1]
radius = 37.2308

[sub_resource type="Animation" id=2]
resource_name = "atack_animation"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 72.9999, 4 ), Vector2( 33.9999, -23 ), Vector2( -3, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "death_animation"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idlle_animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.177
height = 9.646

[sub_resource type="CircleShape2D" id=7]
radius = 40.1302

[node name="player_top_down_F2" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
editor/display_folded = true
shape = SubResource( 1 )
one_way_collision = true

[node name="sprite_player" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0.33333, 2 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/atack_animation = SubResource( 2 )
anims/death_animation = SubResource( 3 )
anims/idlle_animation = SubResource( 4 )
anims/walk_animation = SubResource( 5 )

[node name="arma_player" type="Area2D" parent="." groups=[
"arma_player",
]]
editor/display_folded = true
position = Vector2( -3, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="arma_player" groups=[
"arma_player",
]]
modulate = Color( 0.14902, 0.988235, 0.0313726, 1 )
shape = SubResource( 6 )

[node name="area_corpo_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_player"]
position = Vector2( 1.67247, 2.0906 )
shape = SubResource( 7 )

[node name="position_bullet" type="Position2D" parent="."]
position = Vector2( 41.5806, 0 )
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="arma_player" to="." method="_on_arma_player_body_entered"]
[connection signal="area_entered" from="area_corpo_player" to="." method="_on_area_corpo_player_area_entered"]
